--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,20 @@ flutter:
 
   assets:
     - assets/data/regular_units.json
+    - assets/icons/area.png
+    - assets/icons/currency.png
+    - assets/icons/digital_storage.png
+    - assets/icons/length.png
+    - assets/icons/mass.png
+    - assets/icons/power.png
+    - assets/icons/time.png
+    - assets/icons/volume.png
+
+
+  fonts:
+    - family: Raleway
+      fonts:
+            - asset: third_party/Raleway-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
