Splash Screen Added
Added a simple yet beautiful splash screen for  2 seconds showing the app logo and also warning users to connect to network before using currency conversion

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/icons/power.png
     - assets/icons/time.png
     - assets/icons/volume.png
+    - assets/icons/icon.png
 
 
   fonts:
